--- a/leo.html
+++ b/leo.html
@@ -18,9 +18,6 @@
         <textarea name="text" aria-rowspan="30" aria-colspan="25"></textarea><br>
         <input type="color" name="color" value="">
         <input type="submit" name="save"><br>
-
-
-
-
         </form>
-    </body>
+   </body>
+</html>
